feat(opensearch): Implemented ElasticSearch abstraction layer (#8917)
* feat(opensearch): Implement ElasticSearch abstraction layer for the Schema Manager
#relates to OPT-7348

* feat(opensearch): Implementing comments from review
#relates to OPT-7348

* feat(opensearch): Removing decoupling when dealing with index instantiation only for the index name
#relates to OPT-7348